View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025978 | Open CASCADE | OCCT:Visualization | public | 2015-03-24 20:26 | 2021-06-28 11:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Platform | Android | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025978: Visualization - setup font aliases for Android | ||||
Description | Android does not use traditional Linux schemes for system fonts, and thus Font_FontMgr should be improved. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
parent of | 0032461 | closed | Visualization, OpenGl_Text - expensive call of glGetTexEnviv/glTexEnvi within OpenGL Compatible Profile | |
related to | 0027505 | closed | bugmaster | Visualization, Font_FontMgr - do not look for fonts.dir on OS X |
related to | 0030439 | closed | bugmaster | Visualization - extend fonts search within Font_FontMgr::FindFont() on Linux |
child of | 0025146 | closed | bugmaster | Porting to Android |
|
Branch CR25978 has been created by kgv. SHA-1: 8ca6bb5ebf234c81b78a7597aee680901191eefb Detailed log of new commits: Author: kgv Date: Tue Mar 24 20:39:50 2015 +0300 0025978: Visualization - setup font aliases for Android Font_FontMgr - setup system fonts "Droid Sans Mono", "Droid Serif" and "Roboto" as aliases to "Courier", "Times" and "Arial" on Android. Locate Android system fonts in directory "/system/fonts". OpenGl_Text::FindFont() - print error message on missed fonts. OpenGl_Text::render() - allow straightforward font rendering on OpenGL ES. |
|
Patch is ready for review. |
|
Branch CR25978 has been updated by kgv. SHA-1: 500c66b3d8333696c413fc4f3465420148f8f386 Detailed log of new commits: Author: kgv Date: Wed Mar 25 11:24:12 2015 +0300 add missing checks for core profile |
|
Branch CR25978_1 has been created by kgv. SHA-1: 1afa9af663822454ce46a69ea69b2ba9c9c898af Detailed log of new commits: Author: kgv Date: Wed Mar 25 11:24:52 2015 +0300 0025978: Visualization - setup font aliases for Android Font_FontMgr - setup system fonts "Droid Sans Mono", "Droid Serif" and "Roboto" as aliases to "Courier", "Times" and "Arial" on Android. Locate Android system fonts in directory "/system/fonts". OpenGl_Text::FindFont() - print error message on missed fonts. OpenGl_Text::render() - allow straightforward font rendering on OpenGL ES. |
|
Branch CR25978_1 has been updated forcibly by kgv. SHA-1: 207458ded90b8dda19d28b84d79595d7d42b4ca5 |
|
Branch CR25978_1 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR25978_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 207458ded90b8dda19d28b84d79595d7d42b4ca5 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 11 (11 on master) Windows: 4 (4 on master) Regressions/Differences: http://occt-tests/CR25978-1-master-occt-64/Windows-64-VC10/summary.html 3rdparty fonts A2 bugs vis bug21091_2 Testing cases: Not needed Testing on Linux: Total MEMORY difference: 87485955 / 88604751 [-1.26%] Total CPU difference: 52481.200000000004 / 53186.43000000024 [-1.33%] Testing on Windows: Total MEMORY difference: 87485955 / 88604751 [-1.26%] Total CPU difference: 52481.200000000004 / 53186.43000000024 [-1.33%] |
|
Branch CR25978_1 has been updated by kgv. SHA-1: 920a2571ae078dd632da21c2063722bcffaee301 Detailed log of new commits: Author: kgv Date: Mon Mar 30 15:28:18 2015 +0300 Do not use "Webdings" in tests. Drop duplicating test case bugs/vis/bug21091_2. |
|
Dear bugmaster, please check updated test case (no need to rebuild sources). > Regressions/Differences: > 3rdparty fonts A2 > bugs vis bug21091_2 these test cases are used font "Webdings" which has no letters on Windows (see one missing label "OpenCascade" while comparing snapshots on Windows and Linux) thus does not make sense in this context. Test case has been updated within the patch. bugs/vis/bug21091_2 just duplicates the same test case and has been removed. |
|
Results of test-case 3rdparty fonts A2 re-testing are OK: http://occt-tests/CR25978-1-master-occt-64/Debian60-64/3rdparty/fonts/A2.html http://occt-tests/CR25978-1-master-occt-64/Windows-64-VC10/3rdparty/fonts/A2.html |
|
Branch CR25978 has been deleted by kgv. SHA-1: 500c66b3d8333696c413fc4f3465420148f8f386 |
|
Branch CR25978_1 has been deleted by kgv. SHA-1: 920a2571ae078dd632da21c2063722bcffaee301 |
occt: master 65360da3 2015-04-02 12:10:07 Committer: bugmaster Details Diff |
0025978: Visualization - setup font aliases for Android Font_FontMgr - setup system fonts "Droid Sans Mono", "Droid Serif" and "Roboto" as aliases to "Courier", "Times" and "Arial" on Android. Locate Android system fonts in directory "/system/fonts". OpenGl_Text::FindFont() - print error message on missed fonts. OpenGl_Text::render() - allow straightforward font rendering on OpenGL ES. Do not use "Webdings" in tests. Drop duplicating test case bugs/vis/bug21091_2. |
Affected Issues 0025978 |
|
mod - src/Font/Font_FontMgr.cxx | Diff File | ||
mod - tests/3rdparty/fonts/A2 | Diff File | ||
rm - tests/bugs/vis/bug21091_2 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-03-24 20:26 | kgv | New Issue | |
2015-03-24 20:26 | kgv | Assigned To | => kgv |
2015-03-24 20:40 | git | Note Added: 0038861 | |
2015-03-24 20:40 | kgv | Relationship added | child of 0025146 |
2015-03-25 08:51 | kgv | Note Added: 0038863 | |
2015-03-25 08:51 | kgv | Assigned To | kgv => san |
2015-03-25 08:51 | kgv | Status | new => resolved |
2015-03-25 11:24 | git | Note Added: 0038870 | |
2015-03-25 11:25 | git | Note Added: 0038871 | |
2015-03-25 11:27 | git | Note Added: 0038872 | |
2015-03-25 11:38 |
|
Note Added: 0038874 | |
2015-03-25 11:38 |
|
Assigned To | san => bugmaster |
2015-03-25 11:38 |
|
Status | resolved => reviewed |
2015-03-25 12:05 |
|
Assigned To | bugmaster => apv |
2015-03-30 13:05 |
|
Test case number | => Not needed |
2015-03-30 13:08 |
|
Note Added: 0038977 | |
2015-03-30 13:08 |
|
Assigned To | apv => kgv |
2015-03-30 13:08 |
|
Status | reviewed => assigned |
2015-03-30 13:10 |
|
Note Edited: 0038977 | |
2015-03-30 15:28 | git | Note Added: 0038984 | |
2015-03-30 15:32 | kgv | Note Added: 0038985 | |
2015-03-30 15:32 | kgv | Assigned To | kgv => bugmaster |
2015-03-30 15:32 | kgv | Status | assigned => resolved |
2015-03-30 15:32 | kgv | Status | resolved => reviewed |
2015-03-30 15:33 | kgv | Note Edited: 0038985 | |
2015-03-30 15:33 | kgv | Note Edited: 0038985 | |
2015-03-30 15:37 |
|
Assigned To | bugmaster => apv |
2015-04-01 17:48 |
|
Note Added: 0039113 | |
2015-04-01 17:48 |
|
Assigned To | apv => bugmaster |
2015-04-01 17:48 |
|
Status | reviewed => tested |
2015-04-07 16:08 | bugmaster | Changeset attached | => occt master 65360da3 |
2015-04-07 16:08 | bugmaster | Status | tested => verified |
2015-04-07 16:08 | bugmaster | Resolution | open => fixed |
2015-04-09 09:49 | git | Note Added: 0039453 | |
2015-04-09 09:49 | git | Note Added: 0039454 | |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |
2016-05-16 09:19 | kgv | Relationship added | related to 0027505 |
2019-01-16 00:41 | kgv | Relationship added | related to 0030439 |
2021-06-28 11:12 | kgv | Relationship added | parent of 0032461 |